syntax = "proto3";

package omogen.webapi;

import "webapi/proto/problems.proto";
import "webapi/proto/options.proto";

message ViewProblemRequest {
  option (webrpc).type = FETCH;
  string short_name = 1;
  string language = 2;
}

message ViewProblemResponse {
  ProblemStatement statement = 1;
  ProblemLimits limits = 2;
}

service ProblemService {
  rpc ViewProblem(ViewProblemRequest) returns (ViewProblemResponse) {
  }
}
